// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floodColor renders 0 1`] = `
Array [
  .c0 {
  flood-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders function 1`] = `
Array [
  .c0 {
  flood-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders invalid theme path 1`] = `
Array [
  .c0 {
  flood-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders negative number 1`] = `
Array [
  .c0 {
  flood-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    flood-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    flood-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    flood-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    flood-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    flood-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    flood-color: July;
  }
}

@media April {
  .c0 {
    flood-color: August;
  }
}

@media January {
  .c0 {
    flood-color: September;
  }
}

@media April {
  .c0 {
    flood-color: November;
  }
}

@media June {
  .c0 {
    flood-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    flood-color: July;
  }
}

@media April {
  .c0 {
    flood-color: August;
  }
}

@media January {
  .c0 {
    flood-color: September;
  }
}

@media April {
  .c0 {
    flood-color: November;
  }
}

@media June {
  .c0 {
    flood-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-color: January;
  }
}

@media April {
  .c0 {
    flood-color: December;
  }
}

@media January {
  .c0 {
    flood-color: April;
  }
}

@media April {
  .c0 {
    flood-color: May;
  }
}

@media June {
  .c0 {
    flood-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    flood-color: January;
  }
}

@media April {
  .c0 {
    flood-color: December;
  }
}

@media January {
  .c0 {
    flood-color: April;
  }
}

@media April {
  .c0 {
    flood-color: May;
  }
}

@media June {
  .c0 {
    flood-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders postitive number 1`] = `
Array [
  .c0 {
  flood-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders string 1`] = `
Array [
  .c0 {
  flood-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`floodColor renders valid theme path 1`] = `
Array [
  .c0 {
  flood-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  flood-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
